# PIAIC-209715-Python-Assignments

./: README.md
100plus_python_exercises/: 209715-100pluspython_exercises.ipynb  README.md
Quarter-2/Assignment-01-nature_message_formatter/: message_formatter.py  pyproject.toml
Quarter-2/Assignment-02-hello-world-agent-openai/hello-agent/: .env  README.md  pyproject.toml
Quarter-2/Assignment-02-hello-world-agent-openai/hello-agent/src/hello_agent/: agent_hello.py
Quarter-2/Assignment-03-openai-agent-sdk/finadvisor/: README.md  pyproject.toml
Quarter-2/Assignment-03-openai-agent-sdk/finadvisor/src/finadvisor/: __init__.py  finadvisor.py
Quarter-2/Assignment-04-chainlit-gemini-agent-chatbot/: .env  chainlit_app.py  my_secrets.py
Quarter-2/Assignment-05-Chainlit-and-LiteLLM-Chatbots/chainlit_chatbot/: .env  README.md
Quarter-2/Assignment-06-Chainlit-chatbot/: README.md  chat_history.json  chat_profiles.py  chatbot.py  my_secrets.py
Quarter-2/nature_message_formatter/: README.md  main.py
assignment-04/: 209715.ipynb  README.md
